--- a/my-app/src/styles/CardsContainer.css
+++ b/my-app/src/styles/CardsContainer.css
@@ -1,72 +1,20 @@
 .all-cards-container {
-    position: relative;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    overflow: hidden;
-    perspective: 1000px;
-}
-
-.card-wrapper {
     display: flex;
     align-items: center;
     gap: 10px;
-    transition: transform 0.5s ease;
+    padding: 0;
 }
 
-.card-item {
-    position: absolute;
-    opacity: 0.5;
-    transition: transform 0.5s ease, opacity 0.5s ease;
-    transform-origin: center center;
-    transform-style: preserve-3d;
+.swiper{
+    padding: 0;
+    margin: 0;
+}
+.swiper-slide{
+   padding: 0;
+   margin: 0; 
+}
+.swiper-slide-active{
+    padding: 0;
+    margin: 0;
 }
 
-.active-slide{
-    opacity: 1;
-    transform: scale(1.2) translate(100px);
-    z-index: 2;
-}
-
-.next-slide {
-    transform: translateX(150%) scale(0.8) translateZ(0);
-    z-index: 1;
-}
-
-.prev-btn, .next-btn{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: none;
-    border: none;
-    font-size: 2rem;
-    cursor: pointer;
-}
-
-.prev-btn {
-    left: 10px;
-}
-
-.next-btn {
-    right: 10px;
-}
-
-.pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-}
-
-.dot{
-    height: 10px;
-    width: 10px;
-    margin: 0 5px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    cursor: pointer;
-}
-
-.dot.active{
-    background-color: #717171;
-}
