--- a/my-app/src/styles/Card.css
+++ b/my-app/src/styles/Card.css
@@ -5,7 +5,7 @@
     height: 400px;
     border: none;
     border-radius: 20px;
-    background-color: var(--card-bg);
+    background: var(--card-bg);
     padding-top: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
