--- a/my-app/src/styles/CardsContainer.css
+++ b/my-app/src/styles/CardsContainer.css
@@ -1,3 +1,9 @@
+.toggle-button-box{
+    position: absolute; /* Position it as you need */
+    top: 100px; /* Adjust based on your layout */
+    right: 50%; /* Adjust based on your layout */
+    z-index: 10;
+}
 .all-cards-container {
     display: flex;
     align-items: center;
@@ -8,6 +14,16 @@
 .swiper{
     padding: 0;
     margin: 0;
+}
+
+.swiper-slide {
+    width: 100%; /* Allow flexibility */
+    max-width: 300px; /* Set a max-width to maintain card size */
+    transition: transform 0.3s ease; /* Add a smooth transition */
+}
+
+.swiper-slide.active-slide {
+    transform: scale(1.05); /* Scale up the active card slightly */
 }
 
 
