--- a/my-app/src/styles/Formulas.css
+++ b/my-app/src/styles/Formulas.css
@@ -10,7 +10,7 @@
     /*Selected theme*/
     --card-bg-selected: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
     --text-color-selected: white;
-    --border--selected: white;
+    --border-selected: white;
     --button-bg-selected: white;
     --button-text-color-selected: hsl(237, 63%, 64%);
     --light-text-colorselected: white;
