--- a/my-app/src/styles/Toggle.css
+++ b/my-app/src/styles/Toggle.css
@@ -1,5 +1,22 @@
+.toggle-main-div{
+    align-content: center;
+}
+
+.toggle-main-div h1{
+    color: var(--light-text-color);
+}
 .toggle-button-container {
     position: relative;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: 20px;
+}
+
+.toggle-button-container p {
+    font-weight: 700;
+    font-size: x-small;
+    color: var(--border-color);
 }
 
 input[type="checkbox"] {
@@ -14,12 +31,13 @@ label {
     display: inline-flex;
     align-items: center;
     position: relative;
+    cursor: pointer;
 }
 
 label::before {
     content: '';
     display: inline-block;
-    width: 50px;
+    width: 40px;
     height: 25px;
     background: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
     border-radius: 25px;
@@ -31,8 +49,8 @@ label::after {
     position: absolute;
     top: 1.5px;
     left: 3px;
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     background-color: white;
     border-radius: 50%;
     transition: transform 0.3s ease, background-color 0.3s ease;
@@ -43,5 +61,5 @@ input[type="checkbox"]:checked+label::before {
 }
 
 input[type="checkbox"]:checked+label::after {
-    transform: translateX(25px);
+    transform: translateX(15px);
 }
